data-entry cosmetics + jump back to correct tab

--- a/jl/web/style.css
+++ b/jl/web/style.css
@@ -199,15 +199,22 @@ form dt {
 
 
 form dd {
-    margin: 8px 0px;
+  position: relative;
+  margin: 8px 0px;
 }
 
+form dd a.remove {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
 
 form dl {
     padding-bottom: 8px;
     border-bottom: 1px solid black;
     border-bottom: 1px solid #d9d9d9;
 }
+
 
 
 /* HEADER */
